# relatipy

./: .gitignore  Dockerfile  README.md  README_PACKAGING.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.commits/: [REFACTOR]1_18.09.25.txt
.github/workflows/: publish.yml
.project/tasks/: 0001-Comprobacion-de-sc.md
docs/development/: convention.md  documentation_convention.md  github_convention.md
docs/relativity/: convention.md  coordinates.md  metric.md
notebooks/: christoffel.py  confirmation.ipynb  metric.ipynb  muestra.ipynb  muestra_de_los_simbolos.ipynb  optimized_calculus_template.txt  prueba.ipynb  schwarzschild.ipynb  symbolic.ipynb
notebooks/utils/: coordinate_template.txt  metric_template.txt  symbolic_to_numeric.py
src/relatipy/numeric/: constants.py
src/relatipy/numeric/coordinates/: __init__.py  base.py  boyer_lindquist.py  cilindrical.py
src/relatipy/numeric/geodesic/: geodesic.py
src/relatipy/numeric/metrics/: Minkowski_metric.py  base.py  kerr_metric.py  schwarzschild_metric.py
src/relatipy/numeric/utils/: dimensions.py
tests/numeric/metrics/: context.md  initial_conditions.py  test_kerr_metric.py  test_schwarzschild_metric.py
tests/numeric/utils/: test_dimensions.py
