[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relatipy"
version = "0.0.0"
description = "Numeric and symbolic tools for Kerr black hole geometry (development)"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["relativity", "kerr", "general relativity", "geodesics"]
license = {text = "MIT"}
authors = [
  {name = "lldddv2"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://example.com/relatipy"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
