[metadata]
name = relatipy
version = 0.0.0
description = Numeric and symbolic tools for Kerr black hole geometry
long_description = file: README.md
long_description_content_type = text/markdown
author = lldddv2
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    scipy
    sympy
    matplotlib

[options.packages.find]
where = src
exclude = tests
