[metadata]
name = relatipy
version = 0.0.0
description = Numeric and symbolic tools for Kerr black hole geometry
long_description = file: README.md
long_description_content_type = text/markdown
author = lldddv2
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
# Use requirements.txt to manage install-time dependencies.
# setuptools does not support '-r' in this field directly, but many workflows
# use the requirements file for development/install. Keep this entry as a
# pointer and also use requirements.txt when installing in development.
install_requires =
    sympy
    numpy
    scipy
    plotly
    black
    flake8
    isort
    einsteinpy

[options.packages.find]
where = src
exclude = tests
